
syntax = "proto3";

package kedge.config;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "kedge/config/grpc/backends/backend.proto";
import "kedge/config/http/backends/backend.proto";


/// Config is the top level configuration message for a backend pool.
message BackendPoolConfig {
    message Grpc {
        repeated kedge.config.grpc.backends.Backend backends = 1;
    }
    message Http {
        repeated kedge.config.http.backends.Backend backends = 1;
    }

    repeated TlsServerConfig tls_server_configs = 1;
    Grpc grpc = 2;
    Http http = 3;
}

message TlsServerConfig {
    string name = 1 [(validator.field) = {regex: "^[a-z_.]{2,64}$"}];
    // TODO(mwitkow): add tls-config declarations.
}

